--- a/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_update.html
+++ b/culinary_cloud_ai/applications/recipe_user/templates/recipe_user/recipeuser_update.html
@@ -5,16 +5,25 @@
 
     {% if messages %}
         {% for message in messages %}
-            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+            <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}"
+            style="text-align: center; color: red; font-weight: bold; margin: 20px 0;">
                 {{ message }}
             </div>
         {% endfor %}
     {% endif %}
 
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Update Profile</button>
-</form>
+    <div class="registration-container">
+        <div class="registration-box">
+
+            <h2>Update Profile</h2>
+            <form method="POST" enctype="multipart/form-data" class="registration-form">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Update Profile</button>
+            </form>
+
+        </div>
+    </div>
 
 {% endblock %}
+
